--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "apexcharts": "^3.22.2",
+    "bootstrap": "^4.5.3",
+    "dayjs": "^1.9.6",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-query": "^2.26.2",
+    "react-query-devtools": "^2.6.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
