--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apexcharts": "^3.22.2",
     "bootstrap": "^4.5.3",
     "dayjs": "^1.9.6",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.4.0",
